frontend/src/components/AddTask/AddTaskComponent.scss
@import "../../styles/utils/vars";

.add-task-container {
  padding: 8px 8px 0;
}

.add-task-details {
  width: 100%;
  margin: 0 auto;
  background-color: $backgroundcolor;
  &__row {
    display: flex;
    justify-content: space-between;
  }

  &__row-block {
    width: 100%;
  }

  &__content-row {
    display: flex;
    flex-direction: column;

    &_map {
      flex: 1;
      min-height: 0;
    }
  }
  &__form-title {
    font-size: 14px;
    font-weight: bold;
    width: 100%;
    margin-bottom: 5px;
  }
  &__content {
    display: flex;
    justify-content: space-between;
    height: max-content;
    gap: 10px;
  }
  &__content-block {
    display: flex;
    flex: 1;
    flex-direction: column;
    background-color: $tableHeaderColor;
    border-radius: 4px;
    width: calc(100% - 20px);
  }
  &__content-row-block {
    flex-basis: 100%;
    border-radius: 4px;
    background-color: $backgroundcolor;
    margin: 5px;
    padding: 5px;
    align-items: center;
    &_search {
      display: flex;
      width: 100%;
      gap: 5px;
      margin-bottom: 10px;
    }

    &-map {
      flex: 1;
      min-height: 200px;
      overflow: hidden;
      padding: 0;
    }

    & > img {
      display: block;
      width: 100%;
      border-radius: 4px;
    }
  }
  &__add-point-btn {
    background-color: rgb(20, 179, 20);
    border-radius: 4px;
    z-index: 3;
    padding: 5px;
    color: white;
    border: none;
    width: 30%;
    &:hover {
      background-color: green;
      cursor: pointer;
    }
  }
}

.form-container {
  width: 90%;
  margin: 0 auto;
  border-radius: 4px;
}

.form-name {
  padding: 5px;
  text-align: center;
  color: white;
}

.form__button:first-of-type {
  display: block;
  color: red;
  height: 35px;
  width: 100px;
  margin: 10px auto;
}

.add-task-form {
  &__button {
    margin: 10px auto;
    width: 100%;
    &:hover {
      box-shadow: 0 8px 10px rgba(0, 0, 0, 0.14), 0 3px 14px rgba(0, 0, 0, 0.12),
        0 5px 5px rgba(0, 0, 0, 0.2);
      cursor: pointer;
      z-index: 1;
      position: relative;
    }
  }
}

